[gd_scene load_steps=3 format=3 uid="uid://kajp5oqdistj"]

[ext_resource type="Texture2D" uid="uid://bvxdc1kjue5uw" path="res://icon.svg" id="1_5gps1"]
[ext_resource type="Script" path="res://Scripts/test_body.gd" id="1_ntd35"]

[node name="Test Body" type="Node2D"]
script = ExtResource("1_ntd35")

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
position = Vector2(53, -1)
texture = ExtResource("1_5gps1")
offset = Vector2(-53, 1)

[node name="Sprite2D2" type="Sprite2D" parent="Area2D"]
position = Vector2(81, 0)
texture = ExtResource("1_5gps1")

[node name="Sprite2D3" type="Sprite2D" parent="Area2D"]
position = Vector2(81, -102)
texture = ExtResource("1_5gps1")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(18, -167, 144, -166, 144, 63, -64, 63, -64, -66, 17, -66)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
